--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         ]
     },
     "dependencies": {
-        "axios": "^1.7.7"
+        "axios": "^1.7.7",
+        "mongoose": "^8.6.1"
     }
 }
