Add test e2e with supertest

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "sample.js",
     "type": "module",
     "scripts": {
-        "test": "jest",
-        "test:c": "jest --coverage",
-        "test:w": "jest --watchAll --collectCoverage",
-        "test:node": "node --test **/*native*"
+        "test": "cross-env NODE_ENV=test jest",
+        "test:c": "cross-env NODE_ENV=test jest --coverage",
+        "test:w": "cross-env NODE_ENV=test jest --watchAll --collectCoverage",
+        "test:node": "cross-env NODE_ENV=test node --test **/*native*"
     },
     "keywords": [],
     "author": "",
@@ -16,7 +16,9 @@
     "devDependencies": {
         "@babel/plugin-transform-modules-commonjs": "^7.24.8",
         "@types/jest": "^29.5.12",
-        "jest": "^29.7.0"
+        "cross-env": "^7.0.3",
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0"
     },
     "babel": {
         "env": {
@@ -34,6 +36,7 @@
     },
     "dependencies": {
         "axios": "^1.7.7",
+        "dotenv": "^16.4.5",
         "mongoose": "^8.6.1"
     }
 }
